# AdventOfCode2025

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.test  README.md  codecov.yml
.github/workflows/: main.yml
benches/: aoc_bench.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  input_fetcher.rs  lib.rs  main.rs  puzzle.rs
