[package]
name = "aoc2025"
version = "0.1.0"
authors = ["Olivia Kaufman <olivia@olivia.wtf>"]
edition = "2024"

[dependencies]
cached = "0.56.0"
divisors_fixed = "0.4.0"
itertools = "0.14.0"
num = "0.4.3"
reqwest = {version = "0.12.24", features = ["blocking"]}

[dev-dependencies]
httpmock = "0.8.2"
rand = "0.9.2"
tempfile = "3.23.0"
criterion = "0.8.0"

[[bench]]
name = "aoc_bench"
harness = false
