[package]
name = "aoc2025"
version = "0.1.0"
authors = ["Olivia Kaufman <olivia@olivia.wtf>"]
edition = "2024"

[dependencies]
cached = "0.56.0"
divisors_fixed = "0.4.0"
itertools = "0.14.0"
num = "0.4.3"
rangemap = "1.7.0"
reqwest = {version = "0.12.24", features = ["blocking"]}
z3 = "0.19.6"

[dev-dependencies]
criterion = "0.8.1"
httpmock = "0.8.2"
rand = "0.9.2"
tempfile = "3.23.0"

[[bench]]
name = "aoc_bench"
harness = false
